--- a/templates/weekly_view.html
+++ b/templates/weekly_view.html
@@ -28,7 +28,7 @@
         <div class="alert alert-info mb-0">
             <div class="d-flex justify-content-between align-items-center">
                 <span>本周总工时：<strong>{{ week_total }}h</strong></span>
-                <span>日均工时：<strong>{{ "%.1f"|format(week_total / 5) }}h</strong></span>
+                <span>日均工时(5天)：<strong>{{ "%.1f"|format(week_total / 5) }}h</strong></span>
             </div>
         </div>
     </div>
