--- a/templates/admin_weekly_view.html
+++ b/templates/admin_weekly_view.html
@@ -2,7 +2,7 @@
 
 {% block extra_css %}
 <!-- Select2 CSS -->
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<link href="{{ url_for('static', filename='css/select2.min.css') }}" rel="stylesheet" />
 {% endblock %}
 
 {% block content %}
@@ -66,7 +66,7 @@
 
 {% block extra_js %}
 <!-- Select2 JS -->
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="{{ url_for('static', filename='js/select2.min.js') }}"></script>
 <script>
 $(document).ready(function() {
     $('#userSelect').select2({
